app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

body {
  background-image: url(paper.png);
  font-weight: 400;
  font-family: MontyRegular,sans-serif;
}

/*div {
  background-color:white;
}*/

.status-button {
   width: 225px;
   text-align: left;
   margin: 2px;
}

 h1, h2, h3, h4, th, tr, td{
  font-family: MontyRegular,sans-serif;
 }

#logo-wrapper {
  margin-top: 2%;
  width: 100vw;
  text-align: center;
}

.logo-align {
    float: left !important;
}

a.brand-logo img {
  margin-top: 10px;
  min-width: 380px;
  max-height: 100%;
}

#investigator_nav {
  display: inline-block;
  background-color: white;
  color: #e23b3b;
  float: right;
  font-size: 90%;
  margin-right: 10%;
  padding: 10px;
  border: 2px solid #e23b3b;
}

@media (max-width: 600px) {

  .input-field textarea {
    font-size: 1.5em;
  }

  .complaint-container p {
    font-size: 1.5em;
  }

  .input-field input {
    font-size: 1.5em;
  }

  .btn span {
    font-size: 1.5em;
  }

  .logo-align {
  text-align: center;
}

}


.complaint-table {
  border-collapse:collapse;
  width: 100%;
  text-align: center;
  margin: 0 auto;
  white-space:pre-line;
}

.complaint-table td, th{
  /*ord-wrap:break-word;*/
  padding: 2%;
  min-width: 12%;
}

.complaint-container {
  background-color:white;
  border: 1px solid black;
}

.btn-small.status {
  background-color: #949397 !important;
  /*min-width: 8%;*/
  padding: 0 0.5rem;
  border: 3px solid #b0bec5;
}

.btn-small.status:hover{
  color: #ffcc80 !important;
/*  font-weight: bold;*/
}

.btn-small.current-status {
  background-color: #00838f !important;
  color: white !important;
}

.btn-small.current-status:hover{
  background-color: #ffcc80 !important;
  color: white !important;
  /*border: none !important;*/
  transition: none !important;
  font-weight: normal;
}

.filter-menu {
  display: block;
}

.message-sender {
  color: gray;
  font-style: italic;
}

.new-complaint-notice {
  text-align: center;
  margin-top: 10px;
  background-color: #5AC6C6;
  border: 1px solid #369C9C;
}

.error-msgs {
  text-align: center;
  margin-top: 10px;
  border: 1px solid #FFA8C1;
}

.error {
  padding: 3px 0px;
  color: red;
  font-size: .8em;
}

.complaint-key {
  font-size: 2em;
}

.retrieve-complaint {
  max-width: 270px;
}

.complaint-table th{
  display: table-cell;
  text-align: top;
  vertical-align: text-top !important;
  max-height: 10%;
}


.btn-small {
  border: none;
  border-radius: 2px;
  display: inline-block;
  /*height: 36px;*/
  /*line-height: 36px;*/
  outline: 0;
  padding: 0 2rem;
  text-transform: uppercase;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-shadow: none;
  background-color: transparent;
  color: #C4C4C4;
  cursor: pointer;
  transition: background-color .2s;
}

.btn-small:focus, .btn-small:active {
  background-color: transparent;
}

.btn-small:hover {
  color: #242424;
  background-color: #FF6E6E;
  box-shadow: none;
}

p.fine-print {
  font-size: .8em;
}

.pagination{
  text-align: center;
}

.page {
  color: black !important;
}

.page a, .next a, .last a, .prev a, .first a{
  color: gray !important;
}

